# GtkUIMaker

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  install-dev.sh  install.sh
src/: main.cpp
